--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My digital curriculum vitae</title>
+  <link rel="stylesheet" href = "css/styles.css">
 </head>
 
 <body>
@@ -29,10 +30,10 @@
   <hr>
   <h3> Jobs </h3>
 
-  <table cellspacing="30">
+  <table cellspacing="30;">
 
     <thead>
-      <tr style="background-color: hsla(15, 17%, 91%, 0.521)">
+      <tr style="background-color: #91D8E4;">
         <th>Period</th>
         <th>Employer</th>
         <th>Work</th>
@@ -79,7 +80,7 @@
 
   <hr>
   <h3> Skills </h3>
-  <table cellspacing = "10">
+  <table cellspacing = "10" style="background-color: #BFEAF5;">
     <thead>
       <tr>
         <th> skill</th>
